2007-09-17  Emmanuele Bassi  <ebassi@openedhand.com>

	Merge from stable

	* clutter/eglnative/clutter-event-egl.c:
	Flag every device click after the first as motion events
	instead of button presses. (#505, Shreyas Srinivasan)

2007-09-10  Matthew Allum  <mallum@openedhand.com>

	Port from stable branch.

	* clutter/eglnative/clutter-event-egl.c: (clutter_event_dispatch):
	Only declare tsevent if we have tslib (#498, Robert Bragg)	

2007-09-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.c: Remove stray include <gdk-pixbuf-xlib.h>
	in ClutterStage: the code requesting it was moved in the backends.

2007-08-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-rectangle.c: Fix the border drawing: do not
	overdraw the rectangle on the border and fix the check for
	different border colour. (#488, Neil Roberts)

2007-08-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-effect.c: (clutter_effect_template_set_property):
	Add missing break statement. Whoops.

2007-08-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-main.c: (_clutter_do_pick):
	Call glFinish before reading pixels
	* clutter/eglx/clutter-stage-egl.c: (clutter_stage_egl_realize):
	Add missing read surface in making context current.
	Above fixes via	Kate Alhola.

	* clutter/glx/clutter-glx.h:
	Add missing filter funcs so there actually exported

2007-08-24  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-event.h:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-stage.h:
	* clutter/glx/clutter-backend-glx.c:
	* clutter/glx/clutter-backend-glx.h:
	* clutter/glx/clutter-event-glx.c:
	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-stage-glx.h:
	Add initial support for stage state events.
	Fix fullscreening for an already mapped stage. 

	* tests/test-events.c:
	Print out info from the above. Blue button now toggles 
	fullscreen.

	* clutter/clutter-effect.c: